# discovery

./: CMakeLists.txt  README.md
cmake/: discoveryConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
include/discovery/: discovery_discovered_peer.h  discovery_ip_port.h  discovery_peer.h  discovery_peer_parameters.h  discovery_protocol.h  discovery_protocol_version.h
src/: discovery_ip_port.cpp  discovery_peer.cpp  discovery_protocol.cpp
